vendor/cdk-rs/ic-cdk/tests/compile_fail/no_self.rs
use ic_cdk::query;

#[query]
fn method(self) {}

fn main() {}
